--- a/Tests/Linear Regression/Total_Predict_LR.ipynb
+++ b/Tests/Linear Regression/Total_Predict_LR.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_treino, X_teste, y_treino, y_teste = train_test_split(x,y, test_size=0.3, random_state=3)"
+    "X_train, X_test, y_train, y_test = train_test_split(x,y, test_size=0.3, random_state=3)"
    ]
   },
   {
@@ -97,9 +97,9 @@
     }
    ],
    "source": [
-    "modelo = LinearRegression()\n",
+    "clf = LinearRegression()\n",
     "\n",
-    "modelo.fit(X_treino, y_treino)"
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
@@ -154,10 +154,10 @@
     }
    ],
    "source": [
-    "previsao_modelo = modelo.predict(X_teste)\n",
+    "model = clf.predict(X_test)\n",
     "\n",
-    "print(metrics.r2_score(y_teste, previsao_modelo))\n",
-    "print(previsao_modelo)"
+    "print(metrics.r2_score(y_test, model))\n",
+    "print(model)"
    ]
   }
  ],
