--- a/Tests/Random forest/Total_Predict_RF.ipynb
+++ b/Tests/Random forest/Total_Predict_RF.ipynb
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_treino, X_teste, y_treino, y_teste = train_test_split(x,y, test_size=0.2, random_state=3)"
+    "X_train, X_test, y_train, y_test = train_test_split(x,y, test_size=0.2, random_state=3)"
    ]
   },
   {
@@ -259,9 +259,9 @@
     }
    ],
    "source": [
-    "modelo = RandomForestRegressor()\n",
+    "clf = RandomForestRegressor()\n",
     "\n",
-    "modelo.fit(X_treino, y_treino)"
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
@@ -273,14 +273,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9999749809931543\n"
+      "0.9999714544488711\n"
      ]
     }
    ],
    "source": [
-    "Previsao_modelo = modelo.predict(X_teste)\n",
+    "model = clf.predict(X_test)\n",
     "\n",
-    "print(metrics.r2_score(y_teste, Previsao_modelo))"
+    "print(metrics.r2_score(y_test, model))"
    ]
   },
   {
@@ -310,7 +310,7 @@
     }
    ],
    "source": [
-    "sns.barplot(x=X_treino.columns, y=modelo.feature_importances_)"
+    "sns.barplot(x=X_train.columns, y=clf.feature_importances_)"
    ]
   }
  ],
