--- a/Tests/SVM/Total_Predict_SVM.ipynb
+++ b/Tests/SVM/Total_Predict_SVM.ipynb
@@ -13,6 +13,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
     "import seaborn as sns"
    ]
   },
